# bmstu-iu5

./: .gitattributes  .gitignore  LICENSE  README.md
1 course/: README.md
1 course/1 term/: README.md
1 course/2 term/: README.md
1 term/: README.md
1 term/english/: Article 11.10.22.docx  Article 25.10.22.docx  Presentation (White hackers) (Report).docx
1 term/physical education/: Text for the presentation.docx  Цыпышев Т.А.docx
1 term/programming/: .gitignore
1 term/sociology/: Presentation (Chapter No. 4) (Text).docx  Presentation (Punk Subculture) (Text).docx
2 course/: README.md
2 course/1 term/: README.md
2 course/2 term/: README.md
2 term/: README.html  README.md
2 term/english/: Presentation (Information security) (Text).docx  Presentation (Reverse Engineering) (Text).docx  Presentation (White hacker) (Text).docx
2 term/history/: homewok 1.txt
2 term/physical education/: Цыпышев ТА.docx
2 term/programming/practice/practice_01/: CMakeLists.txt
2 term/programming/practice/practice_01/MyLib/include/: myLib.h
2 term/programming/practice/practice_01/files/: Books.txt  Students.txt  Subscriptions.txt
2 term/programming/practice/practice_01/sources/: main.cpp
3 term/: README.md
3 term/PCPL_course/: README.md
3 term/aasoiu/: README.md  Rating.xlsx
3 term/electrical engineering/: README.md
3 term/jurisprudence/: Methodological recommendations and task options.doc
3 term/physics/: README.md
4 term/: README.md
4 term/electrical engineering/: README.md
4 term/political science/: homework.docx
5 term/english/: notebook.md  (+2 more)
(+892 files in other folders)
